--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: execute deployment script
       run: |
-        python .github/build_procs.py
-      #env:
-      #  key:  
+        python .github/build_procs.py -p SF_PASSWORD
+      env:
+        SF_PASSWORD: ${{ secrets.SF_PASSWORD }}
